// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render Text with default properties 1`] = `
<div>
  <p
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 kfcouu Text__StyledText-wkh56f-0"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.875rem"
    font-style="normal"
    font-weight="400"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "body" 1`] = `
<div>
  <p
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 guBYoV Text__StyledText-wkh56f-0 cxeSYd"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.875rem"
    font-style="normal"
    font-weight="700"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "caption" 1`] = `
<div>
  <p
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 guBYoV Text__StyledText-wkh56f-0"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.875rem"
    font-style="normal"
    font-weight="700"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render highContrast Text with variant "body" 1`] = `
<div>
  <p
    class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 dnntft Text__StyledText-wkh56f-0 cxeSYd"
    color="hsla(0, 0%, 100%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.875rem"
    font-style="normal"
    font-weight="700"
  >
    Displaying some text
  </p>
</div>
`;
